@@ -27,7 +27,6 @@ import static de.ovgu.featureide.fm.core.localization.StringTable.NO_MAPPING_FIL
 
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
 
 import org.eclipse.core.resources.IFile;
@@ -281,10 +280,10 @@ public class MPLBuildProjectJob extends AProjectJob<MPLBuildProjectJob.Arguments
 
 				// Find Random Solution
 				try {
-					LinkedList<List<String>> solutions = newConfiguration.getSolutions(1);
+					List<List<String>> solutions = newConfiguration.getSolutions(1);
 					if (!solutions.isEmpty()) {
 						newConfiguration.resetValues();
-						List<String> solution = solutions.getFirst();
+						List<String> solution = solutions.get(0);
 						for (String solutionFeatureName : solution) {
 							try {
 								newConfiguration.setManual(solutionFeatureName, Selection.SELECTED);
